<resources>
    <string name="app_name">watchgate</string>
    <string name="editText">text</string>
    <string name="buttonGet">Get</string>
    <string name="buttonAdd">ADD</string>
    <string name="textViewHealth">Health</string>
    <string name="textViewTemp">Temperature</string>
    <string name="textViewPlugged">Plugged</string>
    <string name="textViewWifi">Wifi</string>
    <string name="textViewMobile">Mobile Data</string>
    <string name="textViewNetwork">Network</string>
    <string name="textViewLevel">Battery Level</string>
    <string name="editTextHint">Edit Text</string>
    <string name="permission_alert_dialog_title">Alert</string>
    <string name="permission_dialog_message">Please allow all access</string>
    <string name="action_ok">OK</string>
    <string name="error_invalid_phone_number">Invalid Phone Number</string>
    <string name="btn_normal_sms">SMS</string>
    <string name="btn_conditional_sms">CSMS</string>
    <string name="toast_sending_sms">Sending SMS to </string>
    <string name="buttonUpdate">Update</string>
    <string name="textViewBalance">Balance</string>
    <string name="title_activity_settings">Settings</string>
    <string name="watchgate_title">Watch Gate</string>
    <string name="msg_token_fmt">FCM Token generated</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General Settings</string>
    <string name="pref_header_interval">Interval Settings</string>

    <string name="pref_instance">Instance ID</string>
    <string name="pref_instance_value">unnamed</string>
    <string name="own_number">9841424262</string>
    <string name="own_number_label">Mobile Number(s)</string>
    <string name="postpaid_switch_title">SIM Type</string>
    <string name="sms_switch_title">SMS Packs</string>

    <string name="pref_pre_balance_regex_default">.*current balance.*?([0-9,]+).*</string>
    <string name="pref_post_balance_due_regex_default">.*your due.*?([0-9,]+).*</string>
    <string name="pref_post_balance_credit_regex_default">.*available credit.*?([0-9,]+).*</string>
    <string name="pref_pre_balance_top_up_regex_default">.*new balance.*?([0-9,]+).*</string>
    <string name="pref_post_balance_top_up_regex_default">.*has been credited.*</string>
    <string name="pref_sms_pack_info_regex_default">.*free sms.*?([0-9,]+).*</string>
    <string name="pref_sms_pack_active_default">.*SMS.*activated.*</string>
    <string name="pref_sms_pack_null_regex_default">.*no free resource.*</string>
    <string name="pref_stitch_update_func_default">updateStatusForObj</string>
    <string name="pref_header_variable">Advanced</string>
    <string name="pref_header_query">Balance Query Settings</string>
    <string name="pref_header_sms">SMS Pack Settings</string>
    <string name="pref_sms_destination_default">1415</string>
    <string name="pref_balance_query_prepaid_default">BL</string>
    <string name="pref_balance_query_postpaid_default">CB</string>
    <string name="pref_sms_query_default">FR</string>
    <string name="pref_sms_source_default">1415</string>
    <string name="pref_sms_sub_default">SMS300</string>
    <string name="country_code_default">+977</string>
    <string name="pref_all_instances_default">baglung,baitadi,bajura,banke,dadeldhura,dhading,gorkha,ilam,kailali,kanchanpur,pyuthan,rasuwa,sindhuli,sindhupalchowk,sunsari,syangja</string>
    <string name="sms_pack_display">SMS Pack: %d remaining (%s)</string>
    <string name="last_sms_display">Last SMS in: %s</string>
    <string name="pref_critical_balance_msg_slack_default"> :red_circle: &lt;!channel&gt; Balance is Rs. </string>
    <string name="slack_url">https://google.com</string>
    <string name="realm_key_default">watchgate-code</string>
    <string name="info">INFO</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="subscribe">Subscribe</string>
    <string name="free_space">Free Space</string>
    <string name="refresh">refresh</string>
    <string name="textViewInstance">Instance</string>
</resources>
