<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:fragment="com.binokary.watchgate.SettingsActivity$GeneralPreferenceFragment"
        app:icon="@drawable/ic_info_black_24dp"
        app:title="@string/pref_header_general" />
    <Preference
        app:fragment="com.binokary.watchgate.SettingsActivity$SMSPreferenceFragment"
        app:icon="@drawable/ic_sms_black_24dp"
        app:title="@string/pref_header_sms" />
    <Preference
        app:fragment="com.binokary.watchgate.SettingsActivity$NotificationsPreferenceFragment"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:title="Notifications" />
    <Preference
        app:fragment="com.binokary.watchgate.SettingsActivity$IntervalPreferenceFragment"
        app:icon="@drawable/ic_watch_later_black_24dp"
        app:title="@string/pref_header_interval" />
    <Preference
        app:fragment="com.binokary.watchgate.SettingsActivity$QueryPreferenceFragment"
        app:icon="@drawable/ic_sync_black_24dp"
        app:title="@string/pref_header_query" />
    <Preference
        app:fragment="com.binokary.watchgate.SettingsActivity$VariablePreferenceFragment"
        app:icon="@drawable/ic_code_black_24dp"
        app:title="@string/pref_header_variable" />

</PreferenceScreen>