<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_instance_value"
        android:key="instance_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_instance" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_preference_1"
        android:summaryOff="Prepaid"
        android:summaryOn="Postpaid"
        android:title="@string/postpaid_switch_title" />
    <EditTextPreference
        android:defaultValue="@string/country_code_default"
        android:inputType="text"
        android:digits="1234567890+"
        android:key="country_code"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Country Code" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
