<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_sms_preference"
        android:summaryOff="Disabled"
        android:summaryOn="Enabled"
        android:title="@string/sms_switch_title" />
    <EditTextPreference
        android:defaultValue="@string/pref_sms_destination_default"
        android:key="pref_sms_pack_destination"
        android:inputType="phone"
        android:dependency="switch_sms_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="The number you want to send query SMS to"
        android:title="Query SMS Destination"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="@string/pref_sms_source_default"
        android:key="pref_sms_pack_source"
        android:inputType="phone"
        android:dependency="switch_sms_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="The number from where SMS pack information will arrive"
        android:title="SMS Info Source"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/pref_sms_query_default"
        android:key="pref_sms_query"
        android:dependency="switch_sms_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="Body of SMS to be sent for querying SMS balance"
        android:title="SMS Query Message"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/pref_sms_sub_default"
        android:dependency="switch_sms_preference"
        android:key="pref_sms_sub"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="SMS code to subscribe to a SMS pack"
        android:title="SMS Pack Subscription Code"
        app:useSimpleSummaryProvider="true"/>

</PreferenceScreen>
