<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/pref_sms_destination_default"
        android:key="pref_sms_destination"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="The number you want to send query SMS to"
        android:title="Query SMS Destination"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="@string/pref_sms_source_default"
        android:key="pref_sms_source"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="The number from where balance information SMS will arrive"
        android:title="Balance Info SMS Source"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/pref_balance_query_prepaid_default"
        android:key="pref_balance_query_prepaid"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="Body of SMS to be sent for querying Prepaid balance"
        android:title="Balance Query Message (Prepaid)"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="@string/pref_balance_query_postpaid_default"
        android:key="pref_balance_query_postpaid"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="Body of SMS to be sent for querying Postpaid balance"
        android:title="Balance Query Message (Postpaid)"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
